# fhirbolt

./: Cargo.toml  README.md
.github/workflows/: benchmark_pr.yml  codegen_version.yml  rust.yml
benches/: Cargo.toml  bench_serde.rs  bench_serde_json.rs  bench_serde_xml.rs
examples/hl7v2-transform-manual/: Cargo.toml  README.md
examples/hl7v2-transform-manual/data/: HiGHmedAdt00000012.hl7  HiGHmedAdt00000020.hl7
examples/hl7v2-transform-manual/src/: main.rs
examples/hl7v2-transform-manual/src/hl7v2/: mod.rs  parse.rs
examples/hl7v2-transform-manual/src/map/: condition.rs  encounter.rs  mod.rs  patient.rs
fhirbolt/: Cargo.toml
fhirbolt-codegen/: Cargo.toml
fhirbolt-codegen/src/: casing.rs  gather.rs  lib.rs  main.rs  model.rs
fhirbolt-codegen/src/codegen/: de.rs  default.rs  element_map.rs  from.rs  mod.rs  ser.rs  serde_helpers.rs  type_hints.rs
fhirbolt-codegen/src/generate/: de.rs  mod.rs  ser.rs
fhirbolt-codegen/src/ir/: mod.rs  parse.rs
fhirbolt-element/: Cargo.toml  README.md
fhirbolt-element/src/: lib.rs
fhirbolt-model/: Cargo.toml  README.md
fhirbolt-model/src/: lib.rs
fhirbolt-model/src/element/: de.rs  mod.rs  ser.rs
fhirbolt-path/: Cargo.toml
fhirbolt-path/src/parser/: ast.rs  ast_from_pest.rs  mod.rs
fhirbolt-path/src/parser/pest_parser/: fhirpath.pest  mod.rs
fhirbolt-serde/: Cargo.toml  README.md
fhirbolt-serde/src/: decimal.rs  lib.rs  number.rs  utils.rs
fhirbolt-serde/src/context/: de.rs  mod.rs  ser.rs
fhirbolt-serde/src/element/: de.rs  error.rs  mod.rs  ser.rs  sort.rs
fhirbolt-serde/src/element/internal/: de.rs
fhirbolt-serde/src/element/json/: de.rs  mod.rs  ser.rs
fhirbolt-serde/src/element/xml/: de.rs  mod.rs  ser.rs
fhirbolt-serde/src/helpers/: mod.rs
fhirbolt-serde/src/helpers/type_hints/: mod.rs
fhirbolt-serde/src/json/: de.rs  error.rs  mod.rs  ser.rs
fhirbolt-serde/src/model/: mod.rs
fhirbolt-serde/src/model/json/: de.rs  mod.rs  ser.rs
fhirbolt-serde/src/model/xml/: de.rs  mod.rs  ser.rs
fhirbolt-serde/src/xml/: consts.rs  de.rs  error.rs  event.rs  mod.rs  path.rs  read.rs  ser.rs  write.rs
fhirbolt-serde/tests/: serde_json_test.rs  serde_xml_test.rs
fhirbolt-shared/: Cargo.toml  README.md
fhirbolt-shared/src/: lib.rs  path.rs
fhirbolt-shared/src/element/: de.rs  error.rs  mod.rs  ser.rs
fhirbolt-shared/src/element_map/: mod.rs
fhirbolt-shared/src/serde_config/: de.rs  ser.rs
fhirbolt-shared/src/serde_context/: de.rs  ser.rs
fhirbolt-shared/src/serde_helpers/: mod.rs
fhirbolt-shared/src/type_hints/: mod.rs
fhirbolt/src/: lib.rs
fhirbolt/src/json/: de.rs  mod.rs  ser.rs
fhirbolt/src/model/: mod.rs
fhirbolt/src/xml/: de.rs  number.rs  path.rs
fhirbolt/tests/: serde_json_test.rs  serde_xml_test.rs
scripts/: bump_versions.sh  publish_crates.sh
tests/: Cargo.toml  test_serde_json.rs  test_serde_xml.rs
tests/utils/: assert_xml_eq.rs  examples.rs  lib.rs  shuffle.rs
