[package]
name = "benches"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
criterion = "0.4"

fhirbolt = { path = "../fhirbolt", features = ["r4", "r4b"] }
tests = { path = "../tests" }

[[bench]]
name = "bench_serde_json"
path = "bench_serde_json.rs"
harness = false

[[bench]]
name = "bench_serde_xml"
path = "bench_serde_xml.rs"
harness = false
