[package]
name = "fhirbolt-codegen"
version = "0.1.0"
edition = "2018"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
zip = { version = "0.5", features = ["deflate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"]}
regex = "1.6"
lazy_static = "1.4"
quote = "1.0"
proc-macro2 = "1.0"
convert_case = "0.4"
chrono = "0.4"
linked-hash-map = "0.5"
