[package]
name = "fhirbolt-element"
version = "0.2.0"
edition = "2021"
authors = ["Lukas Schmierer <lukas.schmierer@lschmierer.de>"]
description = "Internal element model library of the fhirbolt project"
repository = "https://github.com/lschmierer/fhirbolt"
documentation = "https://docs.rs/fhirbolt"
license = "MIT OR Apache-2.0"

[dependencies]
indexmap = "1.9.2"

fhirbolt-shared = { version = "0.2.0", path = "../fhirbolt-shared" }

[dev-dependencies]
# used by doc-tests
fhirbolt = { path = "../fhirbolt", features = ["r4b"] }
