[package]
name = "fhirbolt-model"
version = "0.1.0"
edition = "2021"

[features]
r4 = []
r4b = []

[dependencies]
indexmap = "1.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }

fhirbolt-shared = { path = "../fhirbolt-shared" }
