[package]
name = "fhirbolt-serde"
version = "0.1.3"
edition = "2021"
authors = ["Lukas Schmierer <lukas.schmierer@lschmierer.de>"]
description = "Internal serde library of the fhirbolt project"
repository = "https://github.com/lschmierer/fhirbolt"
documentation = "https://docs.rs/fhirbolt"
license = "MIT OR Apache-2.0"

[features]
r4 = ["fhirbolt-model/r4"]
r4b = ["fhirbolt-model/r4b"]

[dependencies]
indexmap = "1.9.2"
serde = { version = "1.0" }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
quick-xml = "0.25"

fhirbolt-model = {  version = "0.1.3", path = "../fhirbolt-model" }
fhirbolt-shared = {  version = "0.1.0", path = "../fhirbolt-shared" }

[dev-dependencies]
# used by doc-tests
fhirbolt = { path = "../fhirbolt", features = ["r4b"] }
