[package]
name = "fhirbolt-serde"
version = "0.2.0"
edition = "2021"
authors = ["Lukas Schmierer <lukas.schmierer@lschmierer.de>"]
description = "Internal serde library of the fhirbolt project"
repository = "https://github.com/lschmierer/fhirbolt"
documentation = "https://docs.rs/fhirbolt"
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]

[features]
r4 = ["fhirbolt-model/r4"]
r4b = ["fhirbolt-model/r4b"]

[dependencies]
indexmap = "1.9.2"
quick-xml = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }

fhirbolt-model = {  version = "0.2.0", path = "../fhirbolt-model", optional = true }
fhirbolt-element = {  version = "0.2.0", path = "../fhirbolt-element" }
fhirbolt-shared = {  version = "0.2.0", path = "../fhirbolt-shared" }

[dev-dependencies]
# used by doc-tests
fhirbolt = { path = "../fhirbolt", features = ["r4b"] }
