[package]
name = "fhirbolt-shared"
version = "0.1.3"
edition = "2021"
authors = ["Lukas Schmierer <lukas.schmierer@lschmierer.de>"]
description = "Internal shared library of the fhirbolt project"
repository = "https://github.com/lschmierer/fhirbolt"
documentation = "https://docs.rs/fhirbolt"
license = "MIT OR Apache-2.0"

[dependencies]
phf = { version = "0.11", features = ["macros"] }
indexmap = "1.9.2"
serde = { version = "1.0" }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
