[package]
name = "fhirbolt-shared"
version = "0.4.0"
edition = "2021"
authors = ["Lukas Schmierer <lukas.schmierer@lschmierer.de>"]
description = "Internal shared library of the fhirbolt project"
repository = "https://github.com/lschmierer/fhirbolt"
documentation = "https://docs.rs/fhirbolt"
license = "MIT OR Apache-2.0"

[dependencies]
phf = { version = "0.11", features = ["macros"] }
