[package]
name = "fhirbolt"
version = "0.1.0"
edition = "2018"

[dependencies]
fhirbolt-model = { path = "../fhirbolt-model" }
fhirbolt-serde = { path = "../fhirbolt-serde" }

[dev-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
zip = { version = "0.6", features = ["deflate"] }
serde = "1.0"
serde_json = "1.0"