[package]
name = "fhirbolt"
version = "0.1.0"
edition = "2021"
authors = ["Lukas Schmierer <lukas.schmierer@lschmierer.de>"]
description = "FHIR library"
readme = "../README.md"
repository = "https://github.com/lschmierer/fhirbolt"
documentation = "https://docs.rs/fhirbolt"
license = "MIT OR Apache-2.0"
keywords = ["hl7", "fhir"]

[features]
r4 = ["fhirbolt-model/r4"]
r4b = ["fhirbolt-model/r4b"]

[dependencies]
fhirbolt-model = { version = "0.1.0", path = "../fhirbolt-model" }
fhirbolt-serde = { version = "0.1.0", path = "../fhirbolt-serde" }
