[package]
name = "fhirbolt"
version = "0.2.1"
edition = "2021"
authors = ["Lukas Schmierer <lukas.schmierer@lschmierer.de>"]
description = "FHIR library"
readme = "../README.md"
repository = "https://github.com/lschmierer/fhirbolt"
documentation = "https://docs.rs/fhirbolt"
license = "MIT OR Apache-2.0"
keywords = ["hl7", "fhir"]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
all-features = true

[features]
r4 = ["fhirbolt-model/r4", "fhirbolt-serde/r4"]
r4b = ["fhirbolt-model/r4b", "fhirbolt-serde/r4b"]

[dependencies]
fhirbolt-model = { version = "0.2.0", path = "../fhirbolt-model", optional = true }
fhirbolt-element = {  version = "0.2.0", path = "../fhirbolt-element" }
fhirbolt-serde = { version = "0.2.0", path = "../fhirbolt-serde" }
fhirbolt-shared = { version = "0.2.0", path = "../fhirbolt-shared" }
